top section styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@ layout: default
     <div class="container">
       <h1>Hey, I'm Atticus.</h1>
 
+      <h2 class="typed">Let's make <span></span></h2>
+
       <div class="circles">
         <div class="skills">
           <div class="circle">
@@ -18,9 +20,18 @@ layout: default
         <div class="me">
           <div class="circle">
             <span>
-              <a href="https://www.linkedin.com/in/atticuswhite" title="Connect with Atticus on LinkedIn" target="_blank" class="ln"><i class="fa fa-linkedin"></i></a>
-              <a href="https://twitter.com/atticoos" title="Follow Atticus on Twitter" target="_blank" class="tw"><i class="fa fa-twitter"></i></a>
-              <a href="https://github.com/ajwhite" title="See open source work by Atticus on Github" target="_bank"class="gh"><i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/atticuswhite"
+                title="Connect with Atticus on LinkedIn"
+                target="_blank"
+                class="ln"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/atticoos"
+                title="Follow Atticus on Twitter"
+                target="_blank"
+                class="tw"><i class="fa fa-twitter"></i></a>
+              <a href="https://github.com/ajwhite"
+                title="See open source work by Atticus on Github"
+                target="_bank"
+                class="gh"><i class="fa fa-github"></i></a>
             </span>
           </div>
           <h2>Me</h2>
@@ -32,6 +43,10 @@ layout: default
           <h2>My Work</h2>
         </div>
       </div>
+
+      <p>
+        I'm a Boston based software developer. Lately I've been involved in many AngularJS projects, coming from experience as a full stack developer, mainly PHP and NodeJS, on platforms such as Laravel and Express. During my off hours I am also a WordPress developer and am always interested in working on WordPress solutions. Feel free to reach out.
+      </p>
     </div>
   </section>
 
