--- a/src/index.html
+++ b/src/index.html
@@ -50,4 +50,164 @@ layout: default
     </div>
   </section>
 
+  <section class="skills collapsed">
+    <div class="container">
+      <h1 class="title">What I Do</h1>
+
+      <div class="row">
+        <div class="chart hidden-sm hidden-xs">
+          <h3>Web Applications</h3>
+          <canvas id="chart-1" with="200" height="200"></canvas>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#9c120f;">
+              <img src="/dist/images/icons/angularjs.png" />
+            </div>
+            <h2>AngularJS</h2>
+            <p>Powerful and advanced front end technologies and best practices.</p>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#5e73b5;">
+              <img src="/dist/images/icons/php.png" />
+            </div>
+            <h2>PHP</h2>
+            <p>Frameworks, such as Laravel, to empower a capable MVC architecture.</p>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#e04f14;">
+              <img src="/dist/images/icons/html5.svg" height="84" />
+            </div>
+            <h2>HTML5/CSS3/JS</h2>
+            <p>Modern UI/UX, with a deep understanding of SASS and DOM manipulation and data binding.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="chart hidden-sm hidden-xs">
+          <h3>Websites &amp; eCommerce</h3>
+          <canvas id="chart-2" with="200" height="200"></canvas>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#f07c00;">
+              <img src="/dist/images/icons/magento.svg" />
+            </div>
+            <h2>Magento</h2>
+            <p>For large stores or store owners with specific business needs.</p>
+          </div>
+        </div>
+
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#146ec0;">
+              <img src="/dist/images/icons/wordpress.png" />
+            </div>
+            <h2>Wordpress</h2>
+            <p>Seamless content management. Keep your site up to date without ever touching code.</p>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#a9cc62;">
+              <img src="/dist/images/icons/shopify.png" height="84" />
+            </div>
+            <h2>Shopify</h2>
+            <p>For stores with a simple production collection and simple business needs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row hidden">
+        <div class="chart hidden-sm hidden-xs">
+          <h3>Mobile</h3>
+          <canvas id="chart-3" with="200" height="200"></canvas>
+        </div>
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#000000;">
+              <img src="/dist/images/icons/ios.png" />
+            </div>
+            <h2>iOS</h2>
+            <p>iPhone and iPad development, from games to data-rich applications.</p>
+          </div>
+        </div>
+
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#489ff2;">
+              <img src="/dist/images/icons/metro.png" />
+            </div>
+            <h2>Metro</h2>
+            <p>Windows Phone and Windows Tablet development</p>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#9cc00f;">
+              <img src="/dist/images/icons/android.png" height="84" />
+            </div>
+            <h2>Android</h2>
+            <p>Android development, from games to data-rich applications.</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row hidden">
+        <div class="chart hidden-sm hidden-xs">
+          <h3>Package Management</h3>
+          <canvas id="chart-4" with="200" height="200"></canvas>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#e48632;">
+              <img src="/dist/images/icons/grunt.png" />
+            </div>
+            <h2>Grunt</h2>
+            <p>Build & Automation. Clean compiles, magnification, preprocessing, test running.</p>
+          </div>
+        </div>
+
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#ffcc2f;">
+              <img src="/dist/images/icons/bower.png" />
+            </div>
+            <h2>Bower</h2>
+            <p>Dependency management for dynamic loading applications.</p>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div>
+            <div class="icon" style="background-color:#99be4f;">
+              <img src="/dist/images/icons/node.png" height="84" />
+            </div>
+            <h2>NodeJS</h2>
+            <p>NPM &amp; NodeJS development for applications and custom tasks.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <a href="#" class="more">More</a>
+  </section>
+
+
 </div>
