dot canvas animations

--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,9 @@ featured_projects:
     <a href="#" class="more">More</a>
   </section>
 
-  <section class="background"></section>
+  <section class="background">
+    <canvas id="dots"></canvas>
+  </section>
 
   <section class="projects">
     <div class="container">
