--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@ featured_projects:
 - microsoft-dreamhome
 - tweetdrive
 - microsoft-dreamhome
+- tweetdrive
 ---
 
 <div class="home">
@@ -97,5 +98,11 @@ featured_projects:
   </section>
   <section class="open-source">
     {% include home/open-source.html %}
+  </section>
+  <section class="background">
+    <h1>Labs</h1>
+  </section>
+  <section class="labs">
+    {% include home/labs.html %}
   </section>
 </div>
