--- a/src/index.html
+++ b/src/index.html
@@ -86,20 +86,20 @@ featured_projects:
     <a href="#" class="more">More</a>
   </section>
 
-  <section class="background">
+  <section class="background dots">
     <h1>Featured Work</h1>
   </section>
 
   <section class="projects">
     {% include home/work.html %}
   </section>
-  <section class="background">
+  <section class="background dots">
     <h1>Open Source Projects</h1>
   </section>
   <section class="open-source">
     {% include home/open-source.html %}
   </section>
-  <section class="background">
+  <section class="background wave" style="height: 500px;">
     <h1>Labs</h1>
   </section>
   <section class="labs">
