--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,6 @@ featured_projects:
 - tweetdrive
 - microsoft-dreamhome
 - tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
 ---
 
 <div class="home">
@@ -93,16 +83,16 @@ featured_projects:
   <section class="projects">
     {% include home/work.html %}
   </section>
-  <section class="background dots">
+  <!--section class="background dots">
     <h1>Open Source Projects</h1>
   </section>
   <section class="open-source">
     {% include home/open-source.html %}
-  </section>
-  <section class="background wave" style="height: 500px;">
+  </section-->
+  <section class="background wave">
     <h1>Labs</h1>
   </section>
-  <section class="labs">
-    {% include home/labs.html %}
+  <section class="labs projects">
+    {% include home/open-source.html %}
   </section>
 </div>
