show portfolio items

--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,33 @@ layout: default
 featured_projects:
 - tweetdrive
 - microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
-- microsoft-dreamhome
-- tweetdrive
+- disney-dreamhome
+- robin
+- universal-music-group
+- mmodaq
+- yankee-lobster-company
+- boston-seafood-festival
+- bodimojo
+- hey-nelly
+- forsake
+- whitespace
+- dixie-elixirs
+- bizslate
+- pickle
+- georgie-porgie
+- dixie-botanicals
+- park-co
+- which-test-won
+- recruitics
+- norwood
+- truveris
+- mmj-america
+- tech-steel
+- reunion-pointe
+- industry-tap
+- mslfund
+- christmas-live-wallpaper
+- zillboard
 ---
 
 <div class="home">
