scroll to section

--- a/src/index.html
+++ b/src/index.html
@@ -90,14 +90,14 @@ featured_projects:
     <a href="#" class="more">More</a>
   </section>
 
-  <section class="background dots">
+  <section id="portfolio" class="background dots">
     <h1>Featured Work</h1>
   </section>
 
   <section class="projects">
     {% include home/work.html %}
   </section>
-  <section class="background wave">
+  <section id="labs" class="background wave">
     <h1>Labs</h1>
   </section>
   <section class="labs projects">
