--- a/src/blog.html
+++ b/src/blog.html
@@ -27,7 +27,7 @@ permalink: /blog/
         {% endif %}
       </div>
       <div class="excerpt">
-        {{ post.excerpt }}
+        <p>{{ post.excerpt }}</p>
       </div>
     </section>
   </article>
