--- a/src/index.html
+++ b/src/index.html
@@ -103,4 +103,14 @@ featured_projects:
   <section class="labs projects">
     {% include home/open-source.html %}
   </section>
+
+  <section class="background map">
+    <div id="contact-map"></div>
+    <h1>Get in touch</h1>
+  </section>
+  <section class="contact">
+    <div class="container">
+      Welcome, get in touch
+    </div>
+  </section>
 </div>
