integrate my fluid-labels

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,30 @@ featured_projects:
   </section>
   <section class="contact">
     <div class="container">
-      Welcome, get in touch
+      <div class="row">
+        <form>
+          <h2>Shoot me a message</h2>
+          <div class="form-control">
+            <div class="fluid-label">
+              <input type="text" placeholder="Your name" />
+              <label>Your name</label>
+            </div>
+          </div>
+          <div class="form-control">
+            <div class="fluid-label">
+              <input type="text" placeholder="Your email" />
+              <label>Your email</label>
+            </div>
+          </div>
+          <div class="form-control">
+            <div class="fluid-label">
+              <textarea placeholder="What would you like to say?"></textarea>
+              <label>Your message</label>
+            </div>
+          </div>
+        </form>
+
+      </div>
     </div>
   </section>
 </div>
