--- a/src/index.html
+++ b/src/index.html
@@ -131,8 +131,34 @@ featured_projects:
               <label>Your message</label>
             </div>
           </div>
+          <div class="form-control">
+            <input type="submit" value="Send" />
+          </div>
         </form>
+        <div class="other">
+          <h2>Find me online</h2>
 
+          <div class="links">
+            <div class="social">
+              <i class="fa fa-twitter"></i>
+              <a href="https://twitter.com/atticoos"
+                title="Follow Atticus on Twitter"
+                target="_blank">@atticoos</a>
+            </div>
+            <div class="social">
+              <i class="fa fa-github"></i>
+              <a href="https://github.com/ajwhite"
+                title="Browse open source projects by Atticus White on Github"
+                target="_blank">@ajwhite</a>
+            </div>
+            <div class="social">
+              <i class="fa fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/atticuswhite"
+                title="Connect with Atticus White on LinkedIn"
+                target="_blank">@atticuswhite</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
