reorder and footer links

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@ featured_projects:
     {% include home/work.html %}
   </section>
   <section id="labs" class="background wave">
-    <h1>Labs</h1>
+    <h1>Labs &amp; Open Source</h1>
   </section>
   <section class="labs projects">
     {% include home/open-source.html %}
@@ -146,16 +146,16 @@ featured_projects:
                 target="_blank">@atticoos</a>
             </div>
             <div class="social">
-              <i class="fa fa-github"></i>
-              <a href="https://github.com/ajwhite"
-                title="Browse open source projects by Atticus White on Github"
-                target="_blank">@ajwhite</a>
-            </div>
-            <div class="social">
               <i class="fa fa-linkedin"></i>
               <a href="https://www.linkedin.com/in/atticuswhite"
                 title="Connect with Atticus White on LinkedIn"
                 target="_blank">@atticuswhite</a>
+            </div>
+            <div class="social">
+              <i class="fa fa-github"></i>
+              <a href="https://github.com/ajwhite"
+                title="Browse open source projects by Atticus White on Github"
+                target="_blank">@ajwhite</a>
             </div>
           </div>
         </div>
