--- a/src/index.html
+++ b/src/index.html
@@ -115,19 +115,25 @@ featured_projects:
           <h2>Shoot me a message</h2>
           <div class="form-control">
             <div class="fluid-label">
-              <input type="text" placeholder="Your name" />
+              <input type="text"
+                placeholder="Your name"
+                required />
               <label>Your name</label>
             </div>
           </div>
           <div class="form-control">
             <div class="fluid-label">
-              <input type="text" placeholder="Your email" />
+              <input type="email"
+                placeholder="Your email"
+                required />
               <label>Your email</label>
             </div>
           </div>
           <div class="form-control">
             <div class="fluid-label">
-              <textarea placeholder="What would you like to say?"></textarea>
+              <textarea
+                placeholder="What would you like to say?"
+                required></textarea>
               <label>Your message</label>
             </div>
           </div>
