--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,14 @@ featured_projects:
                 target="_blank">@ajwhite</a>
             </div>
           </div>
+
+          <h2>Check out my latest thought</h2>
+          <div class="latest-post">
+            <div>
+              <a href="#">{{site.posts[0].title}}</a> - {{ site.posts[0].date | date: '%B %-d, %Y'}}
+            </div>
+            {{site.posts[0].excerpt}}  
+          </div>
         </div>
       </div>
     </div>
