--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@ featured_projects:
 
 <div class="home">
 
-  <section class="me">
+  <section class="me active">
     <div class="container">
       <h1>Hey, I'm Atticus.</h1>
 
