--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@ featured_projects:
       </div>
     </div>
 
-    <a href="#" class="more">More</a>
+    <a href="#more-skills" id="more-skills" class="more">More</a>
   </section>
 
   <section id="portfolio" class="background dots">
@@ -104,7 +104,7 @@ featured_projects:
     {% include home/open-source.html %}
   </section>
 
-  <section class="background map">
+  <section id="contact" class="background map">
     <div id="contact-map"></div>
     <h1>Get in touch</h1>
   </section>
