ignore repos, remove icon

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@ featured_projects:
     {% include home/work.html %}
   </section>
   <section id="labs" class="background wave">
-    <h1><span class="octicon octicon-beaker"></span> Labs &amp; Open Source</h1>
+    <h1>Labs &amp; Open Source</h1>
   </section>
   <section class="labs projects">
     {% include home/open-source.html %}
