holy fucking spherical trigonometry

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,16 @@ featured_projects:
 
 <div class="home">
 
+  <section class="landing active">
+
+
+    <div class="content">
+      <h1>Atticus White</h1>
+    </div>
+
+
+  </section>
+
   <section class="me active">
     <div class="container">
       <h1>Hey, I'm Atticus.</h1>
