--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,25 @@ featured_projects:
 
     <div class="content">
       <h1>Atticus White</h1>
+      <h2>Softare Developer</h2>
+      <div class="links">
+        <a><i class="fa fa-twitter"></i></a>
+        <a><i class="fa fa-github"></i></a>
+        <a><i class="fa fa-linkedin"></i></a>
+        <a><i class="fa fa-instagram"></i></a>
+      </div>
+    </div>
+
+    <div class="nav">
+      <a>Home</a>
+      <a>Projects</a>
+      <a>Blog</a>
     </div>
 
 
   </section>
 
-  <section class="me active">
+  <!--section class="me active">
     <div class="container">
       <h1>Hey, I'm Atticus.</h1>
       <div class="circles">
@@ -85,7 +98,7 @@ featured_projects:
         I'm a Boston based software developer. Lately I've been involved in many AngularJS projects, coming from experience as a full stack developer, mainly PHP and NodeJS, on platforms such as Laravel and Express. During my off hours I am also a WordPress developer and am always interested in working on WordPress solutions. Feel free to reach out.
       </p>
     </div>
-  </section>
+  </section-->
 
   <section class="intro">
       {% include home/intro.html %}
