--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,12 @@ featured_projects:
 
   <section class="landing active">
 
+    <a href="#amburgah" id="amburgahz" class="amburgah">
+      <span class="bar-1"></span>
+      <span class="bar-2"></span>
+      <span class="bar-3"></span>
+    </a>
+
 
     <div class="content">
       <h1>Atticus White</h1>
@@ -48,10 +54,12 @@ featured_projects:
       </div>
     </div>
 
-    <div class="nav">
-      <a>Home</a>
-      <a>Projects</a>
-      <a>Blog</a>
+    <div class="ham-overlay">
+      <div class="links">
+        <a>Home</a>
+        <a>Work</a>
+        <a>Blog</a>
+      </div>
     </div>
 
 
