links and down arrow

--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,30 @@ featured_projects:
       <h1>Atticus White</h1>
       <h2>Softare Developer</h2>
       <div class="links">
-        <a><i class="fa fa-twitter"></i></a>
-        <a><i class="fa fa-github"></i></a>
-        <a><i class="fa fa-linkedin"></i></a>
-        <a><i class="fa fa-instagram"></i></a>
+        <a href="https://twitter.com/atticoos"
+           title="Follow Atticus on Twitter"
+           target="_blank">
+           <i class="fa fa-twitter"></i>
+         </a>
+         <a href="https://github.com/ajwhite"
+            title="See open source work by Atticus on Github"
+            target="_blank">
+            <i class="fa fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/atticuswhite"
+           title="Connect with Atticus on LinkedIn"
+           target="_blank">
+           <i class="fa fa-linkedin"></i>
+       </a>
+       <a href="https://instagram.com/atticuswashere"
+          title="See Atticus' photos on Instagram"
+          target="_blank">
+          <i class="fa fa-instagram"></i>
+        </a>
       </div>
     </div>
+
+    <a class="down"></a>
 
     <div class="ham-overlay">
       <div class="links">
