nav/hamburger improvements

--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,15 @@ featured_projects:
       </div>
     </div>
 
-    <a class="down"></a>
+    <a href="#" class="down">
+      <span class="arrow"></span>
+    </a>
 
     <div class="ham-overlay">
       <div class="links">
-        <a>Home</a>
-        <a>Work</a>
-        <a>Blog</a>
+        <a href="/" class="home">Home</a>
+        <a href="/#portfolio" class="portfolio">Work</a>
+        <a href="/blog" class="blog">Blog</a>
       </div>
     </div>
 
